<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="300dp"
    android:layout_gravity="center"
    android:layout_height="wrap_content"
    android:gravity="center_horizontal"
    android:background="@color/menu_focus">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:background="#999"
        android:textColor="#333"
        android:gravity="center_horizontal|center_vertical"
        android:textSize="17dp"
        android:text="@string/welcome"/>
    <EditText
        android:layout_width="250dp"
        android:layout_height="40dp"
        android:id="@+id/txtSetDeviceName_Dialog"
        android:hint="@string/deviceName"
        android:gravity="center_horizontal|center_vertical"
        android:textSize="17sp"
        android:maxLength="20"
        android:background="#fff"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"/>

    <Button
        android:layout_width="150dp"
        android:layout_height="60dp"
        android:text="@string/start"
        android:enabled="false"
        android:layout_marginBottom="20dp"
        android:id="@+id/btn_saveNameDevice"
        />

</LinearLayout>