<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="300dp"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:gravity="center_vertical"
    android:background="#fff">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_marginBottom="5dp"
        android:background="#6884AA">

    </RelativeLayout>

    <EditText
        android:layout_width="250dp"
        android:layout_height="40dp"
        android:hint="@string/serverSave_serverName"
        android:textAlignment="center"
        android:id="@+id/saveServer_setServerName"
        android:layout_gravity="center_horizontal"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/addServerManual"
        android:visibility="gone">

        <EditText
            android:layout_width="190dp"
            android:layout_height="40dp"
            android:hint="IP"
            android:textAlignment="center"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="5dp"
            android:id="@+id/saveServer_setIp"/>

        <EditText
            android:layout_width="120dp"
            android:layout_height="40dp"
            android:hint="@string/serverSave_port"
            android:textAlignment="center"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:id="@+id/saveServer_setPort"
            android:inputType="number" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/addServerAuto"
        android:visibility="gone">

        <TextView
            android:layout_marginTop="10dp"
            android:paddingLeft="30dp"
            android:textSize="15sp"
            android:textColor="#000"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/saveServer_showIp"/>

        <TextView
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:paddingLeft="30dp"
            android:textColor="#000"
            android:textSize="15sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/saveServer_showPort"/>

    </LinearLayout>

    <Button
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:text="@string/serverSave_saveBtn"
        android:id="@+id/saveServer_saveBtn"
        android:layout_gravity="center_horizontal"/>

</LinearLayout>